tried out all the tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p>Hello World!</p>
+      <h1>Hello World!</h1>
+      <p class="dog-breed">Labrador Retriever</p>
+      <h2>
+          <ul>
+       <li>item 1</li>
+           <li>item 2</li>
+      </ul>
+          </h2>
+      <article>lorem ipsum dolor citu </article>
+      <section>
+          <p> this is section 1</p>
+          </section>
+      <blockquote>this is a long quote
+          </blockquote>
+      <a>Link1</a>
+      <em> emphasised text</em>
+      <strong> Strong text</strong>
   </body>
 </html>
