--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
       <section>
           <p> this is section 1</p>
           </section>
-      <blockquote>this is a long quote
-          </blockquote>
-      <a>Link1</a>
-      <em> emphasised text</em>
-      <strong> Strong text</strong>
+      <section>
+          <blockquote>this is a long quote
+              </blockquote>
+          </section>
+      <section>
+          <a>Link1</a>
+          </section>
+          <section>
+              <em> emphasised text</em>
+              </section>
+          <section>
+              <strong> Strong text</strong>
+              </section>
   </body>
 </html>
