--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
   <body>
-      <h1>Hello World!</h1>
-      <p class="dog-breed">Labrador Retriever</p>
-      <h2>
-          <ul>
+    <h1>Hello World!</h1>
+    <p class="dog-breed">Labrador Retriever</p>
+    <h2>
+    <ul>
        <li>item 1</li>
-           <li>item 2</li>
-      </ul>
-          </h2>
+       <li>item 2</li>
+    </ul>
+    </h2>
       <article>lorem ipsum dolor citu </article>
-      <section>
+    <section>
           <p> this is section 1</p>
-          </section>
-      <section>
+    </section>
+    <section>
           <blockquote>this is a long quote
               </blockquote>
-          </section>
-      <section>
-          <a>Link1</a>
-          </section>
-          <section>
+    </section>
+    <section>
+          <ahref = "ananthac.framer.website">Link1</a>
+    </section>
+    <section>
               <em> emphasised text</em>
-              </section>
-          <section>
+    </section>
+    <section>
               <strong> Strong text</strong>
-              </section>
+    </section>
   </body>
 </html>
