--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               </blockquote>
     </section>
     <section>
-          <ahref = "ananthac.framer.website">Link1</a>
+          <ahref = "https://ananthac.framer.website">Link1</a>
     </section>
     <section>
               <em> emphasised text</em>
