--- a/index.html
+++ b/index.html
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <h1>Hello World!</h1>
-    <p class="dog-breed">Labrador Retriever</p>
+<head>
+        <meta charset="UTF-8">
+        </head>
+<body>
+<!-- h1 -->
+    <h1>Hello World!
+        </h1>
+<!-- p -->
+    <p class="dog-breed">Labrador Retriever
+        </p>
+<!-- h2 -->
     <h2>
-    <ul>
-       <li>item 1</li>
-       <li>item 2</li>
-    </ul>
-    </h2>
-      <article>lorem ipsum dolor citu </article>
+        <ul>
+            <li>item 1</li>
+            <li>item 2</li>
+            </ul>
+        </h2>
+<!-- article -->
+    <article>lorem ipsum dolor citu
+        </article>
+<!-- section -->
     <section>
-          <p> this is section 1</p>
-    </section>
+        <p> this is section 1</p>
+        </section>
+<!-- section -->
     <section>
-          <blockquote>this is a long quote
+        <blockquote>this is a long quote
               </blockquote>
-    </section>
+        </section>
+<!-- section -->
     <section>
-          <ahref = "https://ananthac.framer.website">Link1</a>
-    </section>
+        <ahref = "https://ananthac.framer.website">Link1
+            </a>
+        </section>
+<!-- section -->
     <section>
-              <em> emphasised text</em>
-    </section>
+        <em> emphasised text
+            </em>
+        </section>
+<!-- section -->
     <section>
-              <strong> Strong text</strong>
-    </section>
-  </body>
+        <strong> Strong text
+            </strong>
+        </section>
+<!-- div -->
+    <div id="unicorn">
+        unicorns singing songs
+        </div>
+
+</body>
 </html>
