--- a/index.html
+++ b/index.html
@@ -46,8 +46,19 @@
         </section>
 <!-- div -->
     <div id="unicorn">
-        testing testing
+        making changes again and checking
         </div>
-
+<!-- div -->
+   <style>
+    p {
+      color: black;
+    }
+    .red {
+      color: red;
+    }
+    </style>
+    <p>
+      This sentence needs some <span class=”red”>visual emphasis</span> to really bring home the point.
+    </p>
 </body>
 </html>
